# vault-bridge

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  config.example.yaml  docker-compose.yml  getschema.py  justfile  livesync_schema_probe.json
config/: mcp_tools.yaml
docs/: embedding_operations.md  hnsw_benchmark.md  hnsw_benchmark_results_2026-03-01.csv  hnsw_benchmark_results_2026-03-01.md  live_mcp_validation_results_2026-03-01.md  live_mcp_validation_runbook.md  live_validation_results_2026-03-01.md  live_validation_runbook.md
migrations/: 0001_init.sql  0002_embedding_schema.sql  0003_embedding_hnsw_params.sql  0004_file_aliases.sql  0005_search_text_fts.sql  0006_blocks.sql  0007_sync_state_current_seq.sql  0008_embedding_failures.sql  0009_block_embedding_failures.sql  0010_embedding_runtime.sql  0011_context_authorization.sql  0012_vault_files.sql  0013_store_state.sql  0014_sync_recovery_queue.sql  0015_sync_recovery_diagnostics.sql  0016_sync_recovery_reactivation.sql
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
scripts/: benchmark_hnsw_matrix.sh  ensure_context_token_config.py  materialize_config_tokens.py  run_live_mcp_validation.sh  run_live_validation.sh
src/: api.rs  api_docs.rs  authorization.rs  base_query.rs  config.rs  context.rs  couchdb.rs  encryption.rs  error_metadata.rs  graph.rs  lib.rs  livesync.rs  main.rs  markdown.rs  mcp.rs  model.rs  new_note.rs  persistence.rs  runtime_config.rs  search.rs  service.rs  store.rs  summary.rs  workers.rs
tests/: config_reload_tests.rs  (+8 more)
(+1 files in other folders)
