[package]
name = "vault_bridge"
version = "0.5.8"
edition = "2024"
description = "Self-hosted bridge from Obsidian LiveSync vaults to scoped REST and MCP context for agents."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nareto/vault-bridge"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
comrak = "0.29"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
slug = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "migrate", "macros"] }
pgvector = { version = "0.4", features = ["sqlx"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower = { version = "0.5", features = ["util"] }
aes-gcm = "0.10"
base64 = "0.22"
hkdf = "0.12"
pbkdf2 = { version = "0.12", features = ["hmac"] }
urlencoding = "2"

[dev-dependencies]
http-body-util = "0.1"
static_assertions = "1"
tempfile = "3"
